--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <script src="https://cdn.tailwindcss.com"></script>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
@@ -12,8 +13,23 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
+    <%= render 'shared/main_navbar' %>
+      <!--
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      -->
+    <main class="flex justify-between">
+
+      <div class="w-full">
+        <%= yield %>
+      </div>
+
+      <nav class="bg-footerGray p-2">
+        <%=  render 'shared/right_navbar' %>
+      </nav>
+
     </main>
+
+    <%= render 'shared/footer'%>
   </body>
 </html>
