--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -1,1 +1,5 @@
-evaluations
+<% if @evaluations.any? %>
+    <%= render "evaluations", evaluations: @evaluations %>
+<% else %>
+    <%= render 'welcome'%> 
+<% end %>
