--- a/app/views/evaluations/show.html.erb
+++ b/app/views/evaluations/show.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag 'modal' %>
-<section id="<%= dom_id @evaluation %>" class="border-2 w-9/12 mx-auto flex h-48 rounded-lg shadow-lg p-2 my-20">
+<section id="<%= dom_id @evaluation %>" class="border-2 w-9/12 mx-auto flex h-48 rounded-lg shadow-lg p-2 my-16">
   
   <div class="w-48">
     <%= image_tag("Upload.png", class: "object-fit h-full w-full")%>
@@ -30,4 +30,10 @@
       <i class="fa-solid fa-trash text-removeIcon"></i>
     <% end %>
   </div>
+</section>
+
+
+<section class="flex m-10">
+  <%= render 'questions/form' %>
+  <%= render 'questions/questions', evaluation: @evaluation %>
 </section>
