--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,32 +1,47 @@
 <%= turbo_frame_tag "question_#{question.id}" do %>
-    <div class="my-2 flex justify-between p-3 border-2 bg-white rounded-lg">
-        
+    <div class="my-2 p-3 border-2 bg-white rounded-lg">
+        <div class="flexjustify-between">
+            <div>
+                <p class="text-sm">
+                    Name:
+                    <span class="font-semibold">
+                        <%= question.name %>
+                    </span>
+                </p>
+
+                <p class="text-sm">
+                    Question type:
+                    <span class="font-semibold">
+                        <%= question.question_type.humanize %>
+                    </span>
+                </p>
+            </div>
+
+            <div class="flex gap-3">
+                <!--al darle click al icono nos mandara al pagina parcial edit. Ademas le pasamos dos parametros evaluations y el id de la pregunta-->
+                <%= link_to section_question_edit_path(@evaluation, id: question.id) do %>
+                    <i class="fa-solid fa-pen text-editIcon"></i>
+                <% end %>
+
+                <%= button_to section_question_destroy_path(@evaluation, id: question.id), method: :delete, "data-turbo-frame": "_top" do %>
+                    <i class="fa-solid fa-trash text-removeIcon"></i>
+                <% end %>
+            </div>
+        </div>
+
         <div>
-            <p class="text-sm">
-                Name:
-                <span class="font-semibold">
-                    <%= question.name %>
-                </span>
-            </p>
+            <div id="options_all" class="my-3">
+                <h3 class="font-semibold text-sm">Options</h3>
 
-            <p class="text-sm">
-                Question type:
-                <span class="font-semibold">
-                    <%= question.question_type.humanize %>
-                </span>
-            </p>
+                <% question.options.each do |option| %>
+                    <%= render 'options/option', option: option %>
+                <% end %>
+            </div>
+
+            <div>
+                <%= render 'options/form', question: question %>
+            </div>
+
         </div>
-
-        <div class="flex flex-col gap-3">
-            <!--al darle click al icono nos mandara al pagina parcial edit. Ademas le pasamos dos parametros evaluations y el id de la pregunta-->
-            <%= link_to section_question_edit_path(@evaluation, id: question.id) do %>
-                <i class="fa-solid fa-pen text-editIcon"></i>
-            <% end %>
-
-            <%= button_to section_question_destroy_path(@evaluation, id: question.id), method: :delete, "data-turbo-frame": "_top" do %>
-                <i class="fa-solid fa-trash text-removeIcon"></i>
-            <% end %>
-        </div>
-
     </div>
 <% end %>
