--- a/app/views/questions/_questions.html.erb
+++ b/app/views/questions/_questions.html.erb
@@ -3,7 +3,7 @@
         <h2 class="font-semibold text-2xl">Questions (<%= @evaluation.questions.count %>) </h2>
     </div>
 
-    <div class="h-96 overflow-auto">
+    <div class="h-screen overflow-auto">
         <%= @evaluation.questions.each do |question| %>
             <!--question es la variable y se la pasa a la pagina question-->
             <%= render 'questions/question', question: question %>
