--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,19 +1,30 @@
 <%= turbo_frame_tag "question_#{question.id}" do %>
-    <div class="my-2 p-3 border-2 bg-white rounded-lg">
-        <div class="flexjustify-between">
-            <div>
-                <p class="text-sm">
-                    Name:
-                    <span class="font-semibold">
-                        <%= question.name %>
-                    </span>
-                </p>
+    <div class="my-10 p-3 border-2 bg-white rounded-lg shadow-lg">
+        <div class="flex justify-between">
+            <div class="flex w-1//12">
+                <div class="flex justify-center items-center">
+                    <%if question.text_free? %>
+                        <i class="fa-solid fa-font text-2xl mr-3"></i>
+                    <% elsif question.multiple? %>
+                        <i class="fa-solid fa-list text-2xl mr-3"></i>
+                    <% else %>
+                        <i class="fa-solid fa-9 text-2xl mr-3"></i>
+                    <% end %>
 
-                <p class="text-sm">
-                    Question type:
-                    <span class="font-semibold">
-                        <%= question.question_type.humanize %>
-                    </span>
+                </div>
+
+                <div>
+                    <p>
+                        <span class="font-semibold">
+                            <%= question.name %>
+                        </span>
+                    </p>
+
+                    <p class="text-xs">
+                        <span class="font-semibold">
+                            <%= question.question_type.humanize %>
+                        </span>
+                </div>
                 </p>
             </div>
 
@@ -23,25 +34,31 @@
                     <i class="fa-solid fa-pen text-editIcon"></i>
                 <% end %>
 
-                <%= button_to section_question_destroy_path(@evaluation, id: question.id), method: :delete, "data-turbo-frame": "_top" do %>
+                <%= button_to section_question_destroy_path(@evaluation, id: question.id), method: :delete, 
+                    form: {data: {turbo_confirm: "Are you sure?"}}, "data-turbo-frame": "_top" do %>
                     <i class="fa-solid fa-trash text-removeIcon"></i>
                 <% end %>
             </div>
         </div>
 
-        <div>
-            <div id="options_all" class="my-3">
-                <h3 class="font-semibold text-sm">Options</h3>
+        <hr class="my-2 border-2">
 
-                <% question.options.each do |option| %>
-                    <%= render 'options/option', option: option %>
-                <% end %>
-            </div>
+        <% if question.level? || question.multiple? %>
 
             <div>
-                <%= render 'options/form', question: question %>
-            </div>
+                <div id="question_<%= question.id %>_options" class="my-3 border-2 p-4 rounded-lg shadow">
+                    <h3 class="font-bold text-sm text-center mb-2">Options</h3>
 
-        </div>
+                    <% question.options.order(:created_at).each do |option| %>
+                        <%= render 'options/option', option: option %>
+                    <% end %>
+                </div>
+
+                <div>
+                    <%= render 'options/form', {question: question, option: Option.new} %>
+                </div>
+
+            </div>
+        <% end %>
     </div>
 <% end %>
