--- a/app/views/survey_sections/_survey_sections.html.erb
+++ b/app/views/survey_sections/_survey_sections.html.erb
@@ -2,7 +2,9 @@
     
     <div class="flex justify-end mb-5">
         <%= button_to survey_add_sections_path(survey), method: :get, data: { turbo_frame: "modal" } do %>
-            add sections
+            <span class="bg-surveyStrong font-semibold text-white shadow-lg p-2 rounded-lg">
+                add sections
+            </span>
         <% end %>
     </div>
     
