--- a/app/views/survey_sections/add_sections.html.erb
+++ b/app/views/survey_sections/add_sections.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/modal', title: "All sections" do %>
-    <%= form_with(url: survey_save_sections_path(@survey) ) do |f| %>
+    <%= form_with(url: survey_save_sections_path(@survey), data: { controller: "reset", action: "submit -> reset#resetform" } ) do |f| %>
 
         <div class="flex flex-col h-96 my-5 p-5 overflow-y-auto">
             <%= collection_check_boxes(:sections, :ids, Section.all, :id, :name) do |h| %>
