--- a/app/views/survey_sections/_survey_section.html.erb
+++ b/app/views/survey_sections/_survey_section.html.erb
@@ -1,8 +1,10 @@
 <div id="<% section.id %>" class="flex border-2 p-5 my-5 rounded-lg shadow-lg items-center">
    
    <div class="flex flex-col justify-center items-center mr-5 gap-2">
-        <i class="fas fa-arrow-circle-up"></i>
-        <i class="fas fa-arrow-circle-down"></i>
+      <%= button_to survey_up_section_path(survey, id: section.id), method: :patch do %>
+         <i class="fas fa-arrow-circle-up"></i>
+      <% end %>
+      <i class="fas fa-arrow-circle-down"></i>
    </div>
    <div class="w-8/12 flex flex-col mr-5">
      <span class="font-semibold">
