--- a/app/views/survey_sections/_survey_section.html.erb
+++ b/app/views/survey_sections/_survey_section.html.erb
@@ -1,11 +1,16 @@
 <div id="<% section.id %>" class="flex border-2 p-5 my-5 rounded-lg shadow-lg items-center">
    
    <div class="flex flex-col justify-center items-center mr-5 gap-2">
-      <%= button_to survey_up_section_path(survey, id: section.id), method: :patch do %>
-         <i class="fas fa-arrow-circle-up"></i>
+      <% if SurveySection.grab_record(survey.id, section.id).order != 1 %>
+         <%= button_to survey_up_section_path(survey, id: section.id), method: :patch do %>
+            <i class="fas fa-arrow-circle-up"></i>
+         <% end %>
       <% end %>
-      <%= button_to survey_down_section_path(survey, id: section.id), method: :patch do %>
-         <i class="fas fa-arrow-circle-down"></i>
+
+      <% if SurveySection.grab_record(survey.id, section.id).order != SurveySection.set_maximum(survey.id) %>
+         <%= button_to survey_down_section_path(survey, id: section.id), method: :patch do %>
+            <i class="fas fa-arrow-circle-down"></i>
+         <% end %>
       <% end %>
    </div>
    <div class="w-8/12 flex flex-col mr-5">
