--- a/app/views/surveys/_card_survey.html.erb
+++ b/app/views/surveys/_card_survey.html.erb
@@ -33,6 +33,13 @@
     <%= button_to survey_path(survey), id:"remove_chapter_icon", method: :delete, form: {data: {turbo_confirm: "Are you sure?"} } do %>
       <i class="fa-solid fa-trash text-removeIcon"></i>
     <% end %>
+
+    <%= button_to send_survey_path, id: "send_survey", method: :post do %>
+      <i class="fas fa-share"></i>
+    <% end %>
+    <i class="fas fa-cloud-download"></i>
+    <i class="fas fa-users"></i> 
+
   </div>
 </section>
 
