--- a/app/views/surveys/_card_survey.html.erb
+++ b/app/views/surveys/_card_survey.html.erb
@@ -38,7 +38,10 @@
       <i class="fas fa-share"></i>
     <% end %>
 
-    <i class="fas fa-cloud-download"></i>
+    <%= button_to export_answers_path(format: "csv"), method: :get, params: { id: survey.id } ,id: "export answers" do %>
+      <i class="fas fa-cloud-download"></i>
+    <% end %>
+
     <i class="fas fa-users"></i> 
 
   </div>
