--- a/app/views/audits/index.html.erb
+++ b/app/views/audits/index.html.erb
@@ -9,7 +9,7 @@
             <% if @survey.survey_sections.find_by(order: @step).section.evaluation? %>
                 <%= render "evaluation", { evaluation: @survey.survey_sections.find_by(order: @step).section, step: @step, token: @token, survey: @survey } %>
             <% else %>
-                <%= render "chapter", { chapter: @survey.survey_sections.find_by(order: @step).section, step: @step, survey: @survey } %>
+                <%= render "chapter", { chapter: @survey.survey_sections.find_by(order: @step).section, step: @step, survey: @survey, token: @token } %>
             <% end %>
 
         <% end %>
