--- a/app/views/survey_sections/_survey_sections.html.erb
+++ b/app/views/survey_sections/_survey_sections.html.erb
@@ -3,14 +3,13 @@
 
     <!--Este turbo frame va a sustituir todo el contenido por vista de  participants.html.erb-->
     <%= turbo_frame_tag 'participants' do %>
-    
-        <div>
-            <%= button_to survey_participants_path(survey), method: :get do %>
-                users
-            <% end %>
-        </div>
 
         <div class="flex justify-end mb-5">
+            
+            <%= button_to survey_participants_path(survey), method: :get do %>
+                <i class="fas fa-users text-surveyStrong text-2xl mr-5"></i> 
+            <% end %>
+
             <%= button_to survey_add_sections_path(survey), method: :get, data: { turbo_frame: "modal" } do %>
                 <span class="bg-surveyStrong font-semibold text-white shadow-lg p-2 rounded-lg">
                     add sections
