--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,11 @@
         <%= yield %>
       </div>
 
-      <nav class="bg-footerGray p-2">
-        <%=  render 'shared/right_navbar' %>
-      </nav>
-
+      <% if current_user %>
+        <nav class="bg-footerGray p-2">
+          <%=  render 'shared/right_navbar' %>
+        </nav>
+      <% end %>
     </main>
 
     <%= render 'shared/footer'%>
