--- a/app/views/audits/index.html.erb
+++ b/app/views/audits/index.html.erb
@@ -5,11 +5,10 @@
         <% if @step == 0 %>
             <%= render "welcome", { survey: @survey, step: @step } %>
         <% else %>
-        
             <% if @survey.survey_sections.find_by(order: @step).section.evaluation? %>
-                <%= render "evaluation", { evaluation: @survey.survey_sections.find_by(order: @step).section, step: @step, token: @token, survey: @survey } %>
+                <%= render "evaluation", { evaluation: @survey.survey_sections.find_by(order: @step).section, step: @step, token: @token, survey: @survey, bar: @bar } %>
             <% else %>
-                <%= render "chapter", { chapter: @survey.survey_sections.find_by(order: @step).section, step: @step, survey: @survey, token: @token } %>
+                <%= render "chapter", { chapter: @survey.survey_sections.find_by(order: @step).section, step: @step, survey: @survey, token: @token, bar: @bar } %>
             <% end %>
 
         <% end %>
