--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,11 +1,15 @@
 <%= form_with(model: @survey, id: "form_survey", data: { controller: "reset", action: "submit -> reset#resetform"}) do |form| %>
 
-  <div class="flex items-center gap-5 my-2">
+  <div>
+    <%= render 'shared/errors', objt: @survey %>
+  </div>
+
+  <div class="flex flex-col my-3">
     <%= form.label :name, class: "text-white font-bold w-2/12" %>
     <%= form.text_field :name, class:"p-2 rounded-lg text-sm font-semibold w-full" %>
   </div>
 
-  <div class="flex items-center gap-5 my-2">
+  <div class="flex flex-col my-3">
     <%= form.label :description, class: "text-white font-bold w-2/12" %>
     <%= form.text_field :description, class:"p-2 rounded-lg text-sm font-semibold w-full" %>
   </div>
